@startuml DOSW_Library_ER_3FN
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333
skinparam arrowColor #333333
skinparam shadowing false

entity User {
    *id : VARCHAR(20)
    *name : VARCHAR(100)
    *email : VARCHAR(100)
    *username : VARCHAR(50)
    *password : VARCHAR(255)
    *role : ENUM
    *created_at : TIMESTAMP
    *updated_at : TIMESTAMP
}

entity Book {
    *id : VARCHAR(20)
    *title : VARCHAR(200)
    *author : VARCHAR(100)
    *isbn : VARCHAR(20)
    *copies : INT
    *available : INT
    *loaned : INT
    categories : TEXT
    *created_at : TIMESTAMP
    *updated_at : TIMESTAMP
}

entity Loan {
    *id : VARCHAR(20)
    *user_id : VARCHAR(20)
    *book_id : VARCHAR(20)
    *loan_date : TIMESTAMP
    *due_date : TIMESTAMP
    return_date : TIMESTAMP
    *status : ENUM
    *created_at : TIMESTAMP
    *updated_at : TIMESTAMP
}

entity LoanStatus {
    *id : INT
    *loan_id : VARCHAR(20)
    *status : ENUM
    *changed_at : TIMESTAMP
    reason : TEXT
}

User ||--o{ Loan
Book ||--o{ Loan
Loan ||--o{ LoanStatus

@enduml
